<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ua.com.anyapps.makemoneyfast.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_finance"
        android:name="ua.com.anyapps.makemoneyfast.ui.finance.FinanceFragment"
        android:label="@string/menu_finance"
        tools:layout="@layout/fragment_finance" />

    <fragment
        android:id="@+id/nav_earn_money"
        android:name="ua.com.anyapps.makemoneyfast.ui.earn_money.EarnMoneyFragment"
        android:label="@string/menu_earn_money"
        tools:layout="@layout/fragment_earn_money" />
</navigation>